<resources>
    <string name="app_name">Trans-Brat</string>
    <string name="cont_desc_imagem">imagem</string>
    <string name="content_desc_trlogo_imagem">trlogo_imagem</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="Title_login">Login</string>
    <string name="Title_cadastro">Cadastro</string>
    <string name="form_1_section_0_question_1">Seu nome</string>
    <string name="form_1_section_0_question_2">Sua matrícula</string>
    <string name="form_1_section_1_question_1">O acidente ocorreu no estado do Rio de Janeiro?</string>
    <string name="form_1_section_2_question_1">Sua nacionalidade é brasileira?</string>
    <string name="form_1_section_3_question_1">O acidente ocorreu em uma rodovia federal (BR)?</string>
    <string name="form_1_section_4_question_1">O acidente causou vítimas?</string>
    <string name="form_1_section_5_question_1">O acidente envolveu mais de 5 (cinco) veículos?</string>
    <string name="form_2_section_1_question_1">Quando ocorreu o acidente?</string>
    <string name="form_2_section_1_question_2">Data</string>
    <string name="form_2_section_1_question_2_placeholder">Escolha uma data</string>
    <string name="form_2_section_1_question_3">Horário</string>
    <string name="form_2_section_1_question_3_placeholder">--:--</string>
    <!-- Formulário 2 - Pergunta 2 -->
    <string name="form_2_section_2_question_1">Onde ocorreu o acidente?</string>
    <string name="form_2_section_2_question_2">Local do acidente</string>
    <string name="form_2_section_2_question_2_placeholder">Selecione uma opção</string>
    <string name="form_2_section_2_question_3">Especifique</string>
    <string name="form_2_section_2_question_3_placeholder">Selecione uma opção</string>
    <!-- Formulário 2 - Pergunta 3 -->
    <string name="form_2_section_3_question_1">Endereço</string>
    <string name="form_2_section_3_question_2">CEP</string>
    <string name="form_2_section_3_question_2_placeholder">_____-___</string>
    <string name="form_2_section_3_question_3">Lograd.</string>
    <string name="form_2_section_3_question_4">Número</string>
    <string name="form_2_section_3_question_5">Complemento</string>
    <string name="form_2_section_3_question_6">Bairro</string>
    <string name="form_2_section_3_question_7">Cidade</string>
    <string name="form_2_section_3_question_8">UF</string>
    <string name="form_2_section_3_question_9">Ponto de referência</string>
    <!-- Formulário 2 - Pergunta 4 -->
    <string name="form_2_section_4_question_1">Condições do local</string>
    <string name="form_2_section_4_question_2">Quais as condições de visibilidade?</string>
    <string name="form_2_section_4_question_3">Quais as condições da pista?</string>
    <string name="form_2_section_4_question_4">Quais as condições da sinalização?</string>
    <!-- Formulário 2 - Pergunta 5 -->
    <string name="form_2_section_5_question_1">Qual foi o tipo de acidente?</string>
    <!-- Formulário 3 - Pergunta 1 -->
    <string name="form_3_section_1_question_1">Dados do veículo</string>
    <string name="form_3_section_1_question_2">Número de ordem</string>
    <string name="form_3_section_1_question_3">Placa</string>
    <string name="form_3_section_1_question_3_placeholder">___-____</string>
    <string name="form_3_section_1_question_4">Marca/Modelo</string>
    <string name="form_3_section_1_question_5">Tipo do veículo</string>
    <string name="form_3_section_1_question_6">Cor predominante</string>
    <string name="form_3_section_1_question_7">UF</string>
    <string name="form_3_section_1_question_8">Ano de fabricação</string>
    <string name="form_3_section_1_question_9">Ano do modelo</string>
    <string name="form_3_section_1_question_10">Nº do Chassi</string>
    <string name="form_3_section_1_question_11">RENAVAM</string>
    <string name="form_3_section_1_question_12">O veículo é da empresa?</string>
    <!-- Formulário 3 - Pergunta 2 -->
    <string name="form_3_section_2_question_1">Dados da empresa</string>
    <string name="form_3_section_2_question_2">Razão social</string>
    <string name="form_3_section_2_question_3">CNPJ</string>
    <string name="form_3_section_2_question_3_placeholder">__.___.___/____-__</string>
    <!-- Formulário 3 - Pergunta 3 -->
    <string name="form_3_section_3_question_1">Dados do proprietário</string>
    <string name="form_3_section_3_question_2">Nome</string>
    <string name="form_3_section_3_question_3">CPF</string>
    <string name="form_3_section_3_question_3_placeholder">___.___.___-__</string>
    <string name="form_3_section_3_question_4">Data de nascimento</string>
    <string name="form_3_section_3_question_4_placeholder">Escolha uma data</string>
    <string name="form_3_section_3_question_5">O proprietário é o condutor?</string>
    <!-- Formulário 3 - Pergunta 4 -->
    <string name="form_3_section_4_question_1">Endereço</string>
    <string name="form_3_section_4_question_2">CEP</string>
    <string name="form_3_section_4_question_2_placeholder">_____-___</string>
    <string name="form_3_section_4_question_3">Lograd.</string>
    <string name="form_3_section_4_question_4">Número</string>
    <string name="form_3_section_4_question_5">Complemento</string>
    <string name="form_3_section_4_question_6">Bairro</string>
    <string name="form_3_section_4_question_7">Cidade</string>
    <string name="form_3_section_4_question_8">UF</string>
    <string name="form_3_section_4_question_9">O proprietário é o condutor?</string>
    <!-- Formulário 3 - Pergunta 5 -->
    <string name="form_3_section_5_question_1">Endereço do proprietário</string>
    <string name="form_3_section_5_question_2">CEP</string>
    <string name="form_3_section_5_question_2_placeholder">_____-___</string>
    <string name="form_3_section_5_question_3">Lograd.</string>
    <string name="form_3_section_5_question_4">Número</string>
    <string name="form_3_section_5_question_5">Complemento</string>
    <string name="form_3_section_5_question_6">Bairro</string>
    <string name="form_3_section_5_question_7">Cidade</string>
    <string name="form_3_section_5_question_8">UF</string>
    <string name="form_3_section_5_question_9">Nº CNH</string>
    <string name="form_3_section_5_question_9_placeholder">_________-__</string>
    <string name="form_3_section_5_question_10">Validade</string>
    <string name="form_3_section_5_question_10_placeholder">Escolha uma data</string>
    <!-- Formulário 3 - Pergunta 6 -->
    <string name="form_3_section_6_question_1">Dados do condutor</string>
    <string name="form_3_section_6_question_2">Nome</string>
    <string name="form_3_section_6_question_3">CPF</string>
    <string name="form_3_section_6_question_3_placeholder">___.___.___-__</string>
    <string name="form_3_section_6_question_4">Data de nascimento</string>
    <string name="form_3_section_6_question_4_placeholder">Escolha uma data</string>
    <string name="form_3_section_6_question_5">Nº CNH</string>
    <string name="form_3_section_6_question_5_placeholder">_________-__</string>
    <string name="form_3_section_6_question_6">Validade</string>
    <string name="form_3_section_6_question_6_placeholder">Escolha uma data</string>
    <!-- Formulário 3 - Pergunta 7 -->
    <string name="form_3_section_7_question_1">Endereço do condutor</string>
    <string name="form_3_section_7_question_2">CEP</string>
    <string name="form_3_section_7_question_2_placeholder">_____-___</string>
    <string name="form_3_section_7_question_3">Lograd.</string>
    <string name="form_3_section_7_question_4">Número</string>
    <string name="form_3_section_7_question_5">Complemento</string>
    <string name="form_3_section_7_question_6">Bairro</string>
    <string name="form_3_section_7_question_7">Cidade</string>
    <string name="form_3_section_7_question_8">UF</string>
    <!-- Formulário 3 - Pergunta 8 -->
    <string name="form_3_section_8_question_1">Danos</string>
    <string name="form_3_section_8_question_2">A imagem abaixo é meramente ilustrativa. Seja qual for o tipo de veículo (caminhão, moto, ônibus, etc.), clique nos locais correspondentes aos danos:</string>
    <!-- Formulário 4 - Pergunta 1 -->
    <string name="form_4_section_1_question_1">Quantidade de veículos envolvidos no acidente</string>
    <!-- Formulário 5 - Pergunta 1 -->
    <string name="form_5_section_1_question_1">Testemunha 1</string>
    <string name="form_5_section_1_question_2">Nome</string>
    <string name="form_5_section_1_question_3">CPF</string>
    <string name="form_5_section_1_question_3_placeholder">___.___.___-__</string>
    <string name="form_5_section_1_question_4">Celular</string>
    <string name="form_5_section_1_question_4_placeholder">(  ) _____-____</string>
    <!-- Formulário 5 - Pergunta 2 -->
    <string name="form_5_section_2_question_1">Testemunha 2</string>
    <string name="form_5_section_2_question_2">Nome</string>
    <string name="form_5_section_2_question_3">CPF</string>
    <string name="form_5_section_2_question_3_placeholder">___.___.___-__</string>
    <string name="form_5_section_2_question_4">Celular</string>
    <string name="form_5_section_2_question_4_placeholder">(  ) _____-____</string>
    <!-- Formulário 5 - Pergunta 3 -->
    <string name="form_5_section_3_question_1">Testemunha 3</string>
    <string name="form_5_section_3_question_2">Nome</string>
    <string name="form_5_section_3_question_3">CPF</string>
    <string name="form_5_section_3_question_3_placeholder">___.___.___-__</string>
    <string name="form_5_section_3_question_4">Celular</string>
    <string name="form_5_section_3_question_4_placeholder">(  ) _____-____</string>
    <!-- Formulário 5 - Pergunta 4 -->
    <string name="form_5_section_4_question_1">Testemunha 4</string>
    <string name="form_5_section_4_question_2">Nome</string>
    <string name="form_5_section_4_question_3">CPF</string>
    <string name="form_5_section_4_question_3_placeholder">___.___.___-__</string>
    <string name="form_5_section_4_question_4">Celular</string>
    <string name="form_5_section_4_question_4_placeholder">(  ) _____-____</string>
    <string name="remove_image">Remover imagem</string>
</resources>